Update integration documentation: rename group to "Integrations", add "Keyingress" guide, and modify "Decipher" title to include "(Assistant)"

--- a/integration-guides/decipher.mdx
+++ b/integration-guides/decipher.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Decipher"
+title: "Decipher (Assistant)"
 description: "Learn how to use ReDem’s Integration Assistant to apply ReDem’s quality checks in Decipher"
 icon: "code"
 iconType: "regular"
