Update Keyingress integration video link and title in documentation

--- a/integration-guides/keyingress.mdx
+++ b/integration-guides/keyingress.mdx
@@ -7,8 +7,8 @@ iconType: "regular"
 
 <iframe
   className="w-full aspect-video rounded-xl"
-  src="https://www.youtube.com/embed/c8mnW64oUfE?si=g6rw11Oz-Cx_m8HQ"
-  title="AI-Assisted Decipher Integration"
+  src="https://www.youtube.com/embed/w7vm2p6MpcQ?si=BVnk6J9SBE5m6aBL"
+  title="Keyingress Integration"
   frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowFullScreen
