Fix typo in file-import documentation regarding single sheet requirement.

--- a/features/file-import.mdx
+++ b/features/file-import.mdx
@@ -11,7 +11,7 @@ To ensure smooth processing and the best possible results, please follow these g
 importing data:
 
 - **File Format**: Only CSV or Excel files are supported.
-- **Single Sheet::** The file must contain all information in a single sheet. All answers must be provided as plain text (not coded values).
+- **Single Sheet:** The file must contain all information in a single sheet. All answers must be provided as plain text (not coded values).
 - **Header Row (Row 1):** The first row must contain unique column headings that identify each variable.
 - **Question Text Row (Row 2):** The second row must contain the full question text for each column.
 - **Respondent Data (Row 3 onward):** Starting from the third row, list the responses. Each row represents one respondent, and all responses should be in plain text.
