--- a/features/file-import.mdx
+++ b/features/file-import.mdx
@@ -5,6 +5,15 @@ icon: "file-import"
 iconType: "regular"
 ---
 
+<iframe
+  className="w-full aspect-video rounded-xl"
+  src="https://youtu.be/lPV6z4V72ds?si=i6ICq_t2W-SSbdAx"
+  title="File Import Guide"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowFullScreen
+></iframe>
+
 ## Preparing Your Data
 
 To ensure smooth processing and the best possible results, please follow these guidelines before
