Update video link in file import documentation for improved accessibility

--- a/features/file-import.mdx
+++ b/features/file-import.mdx
@@ -7,7 +7,7 @@ iconType: "regular"
 
 <iframe
   className="w-full aspect-video rounded-xl"
-  src="https://youtu.be/lPV6z4V72ds?si=i6ICq_t2W-SSbdAx"
+  src="https://www.youtube.com/embed/lPV6z4V72ds?si=yzitFq3HvXgik5Tt"
   title="File Import Guide"
   frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
