Add support for multi-sheet Excel imports, enhance CSV export filenames, and implement minor UX improvements in the application changelog.

--- a/changelogs/application-change-log.mdx
+++ b/changelogs/application-change-log.mdx
@@ -5,6 +5,20 @@ icon: "bullhorn"
 iconType: "regular"
 ---
 
+<Update label="2025-11-06" description="v1.2.5">
+  ## File Import: Multi-Sheet Excel Support
+
+  - Users can upload Excel files where the data map is on a separate sheet. The system automatically relates columns in the data sheet with the data map sheet using AI.
+
+  ## Export & Download
+
+  - CSV exports now include the survey name and a timestamp in the filename for clarity.
+
+  ## UX & Interface
+
+  - Various small improvements.
+</Update>
+
 <Update label="2025-10-25" description="v1.2.4">
   ## UX & Interface
 
