--- a/knowledge-base/quality-checks/open-ended-score.mdx
+++ b/knowledge-base/quality-checks/open-ended-score.mdx
@@ -7,75 +7,26 @@ iconType: "regular"
 
 ## What is the Open-Ended Score?
 
-ReDem enables precise analysis of open-ended responses by classifying them into eight distinct categories, each with a corresponding score. This process is powered by a GPT based AI model, delivering reliable and comprehensive results you can trust. 
+Open-ended quality checks evaluate free-text responses for relevance, informativeness, language conformity, duplication, and potential synthetic (automated) generation. The goal is to ensure that collected open-ended answers are meaningful and usable for analysis.
 
-## How is the Open-Ended Score calculated?
+## High-level checks performed
 
-Each response is first classified into one of our quality categories. Each category is then assigned a score from 0 to 100, reflecting the response's quality. These question scores are aggregated to calculate an overall Open-Ended Score (OES) for each respondent.
+The following is a conceptual (non-exhaustive) list of the kinds of checks applied to open-ended responses:
 
-## The quality categories are: 
-
-### `  Wrong Topic  `
-
-Identifies responses that deviate from the question or topic by evaluating their context against relevant keywords and the question itself. The context check is always enabled.
-
-Keywords are only necessary when the question lacks sufficient context. When adding them, ensure they broadly reflect the intended context to avoid false positives caused by overly narrow interpretations. Both the question and keywords must be in a supported language.
-
-Responses failing to align with the expected context are classified as "Wrong Topic".
-### `  AI Generated Answer  `
-
-The model analyzes open-ended responses to assess whether they were artificially generated, evaluating patterns across a wide range of variables including grammar, structure, phrasing, syntax, word choice, sentence length, complexity, and predictability.
-
-### `  Nonsense  `
-
-Enabling nonsense detection identifies gibberish, random numbers, and meaningless statements. Such responses are classified as "Nonsense".
-
-### `  Wrong Language  `
-
-Responses provided in an unexpected language are flagged as “Wrong Language”. You can specify the expected language(s); if none are defined, the language check remains inactive. Open-Ended Score supports over 100 languages, including English, German, French, Spanish, Chinese, Japanese, Swedish, and more. The check is performed per respondent, and it is recommended to use the questionnaire language as the reference.
-
-<Note> Questions lacking linguistic content (e.g., brand awareness questions) are not suitable for the language check.</Note>
-
-### `  Duplicate Respondent  `
-
-The optional duplicate check detects potentially fraudulent responses, identifying both exact duplicates and partial matches.
-
-* This check detects repeated responses to the same question. Short or common responses are not penalized, but substantial duplications may lower the score. Scoring is continuous, so minor overlap results in moderate impact, while extensive duplication leads to stronger penalties.
+- Topicality / Relevance: Does the response generally address the question asked?
 
 
-* **Duplicate Respondents Across Multiple Questions**: When repetition occurs across several questions, the penalty increases.
+- Informativeness: Does the response add substantive content (details, examples, clarifying facts) rather than being overly short or generic?
 
-![](</images/Duplicate Respondents in multiple questions.png>)
 
-* **Full Response Set Matches**: If a respondent’s full set of answers matches another’s, all responses are marked as duplicates.
+- Language conformity: Is the response in the expected language and free from abuse (as defined by your project’s policy)?
 
-* Whitelists exclude standard or commonly accepted responses from being flagged.
 
-### `  Duplicate Answer  `
+- Duplication / Redundancy: Does the response appear identical or highly similar to other responses from the same respondent or across recent data?
 
-We check whether a respondent provides the same or similar answers across multiple questions.
 
-<Note> If a response qualifies as both "Duplicate Respondent" and "Duplicate Answer," the "Duplicate Respondent" category takes precedence.</Note>
+- Synthetic generation indicators: Automated methods evaluate linguistic and, when available, behavioral signals to detect patterns commonly associated with synthetic (machine-generated) text.
 
-![](</images/Duplicate Answer.png>)
-
-### `  Bad Language  `
-
-Responses containing swear words or offensive language are classified as "**Bad Language**".
-
-### `  Generic Answers  `
-
-Responses containing vague or generic phrases like “good,” “ok,” “anything,” or “yes” are classified as **Generic Answers**.
-
-### `  No Information  `
-
-Responses that lack meaningful content—such as “no idea,” “nothing,” “no comment,” or “I don’t know”—are labeled as **No Information**.
-
-### `  Valid Answer  `
-
-Valid responses are those that do not fall into any other quality category. Each response is also evaluated for its level of detail.
-
-<br />
 
 ## Use of GPT for Open-Ended Score
 
