Clarify file import documentation by updating the description of multi-sheet support to specify that all data must be fully labeled on single sheets.

--- a/features/file-import.mdx
+++ b/features/file-import.mdx
@@ -20,7 +20,7 @@ To ensure smooth processing and the best possible results, please follow these g
 importing data:
 
 - **File Format**: Only CSV or Excel files are supported.
-- **Sheets:** Single-sheet files or multi-sheet Excel files are supported. If your file has multiple sheets, you'll select which sheet contains the data and which contains the data map in Step 1. When using a single sheet, all answers must be provided as plain text (not coded values).
+- **Labels & Sheets:** Single-sheet files or multi-sheet Excel files are supported. If your file has multiple sheets, you'll select which sheet contains the data and which contains the labels in Step 1. When using a single sheet, all data on that sheet must be fully labelled. All answers must be provided as plain text (not coded values).
 - **Header Row (Row 1):** The first row must contain unique column headings that identify each variable.
 - **Question Text Row (Row 2):** The second row must contain the full question text for each column.
 - **Respondent Data (Row 3 onward):** Starting from the third row, list the responses. Each row represents one respondent, and all responses should be in plain text.
