Refine Behavioral Analytics Score and Grid Question Score documentation for clarity, removing redundant text and enhancing descriptions of usage and analyzed patterns.

--- a/knowledge-base/quality-checks/grid-question-score.mdx
+++ b/knowledge-base/quality-checks/grid-question-score.mdx
@@ -20,6 +20,6 @@ The GQS helps assess data quality in grid questions (also known as matrix questi
 
 ## What Patterns Does the GQS Detect?
 
-ReDem currently analyzes the following behavioral patterns in grid responses:
+Here are some examples of behavioral patterns in grid responses that are analyzed by ReDem:
 
 ![Grid-Question Score patterns](/images/Pattern-for-GQS.png)
