Add English language support to the documentation

--- a/knowledge-base/miscellaneous/language-support.mdx
+++ b/knowledge-base/miscellaneous/language-support.mdx
@@ -22,7 +22,8 @@ Below is the list of supported languages along with their corresponding [ISO 639
 - Croatian – `hr`  
 - Czech – `cs`  
 - Danish – `da`  
-- Dutch – `nl`  
+- Dutch – `nl`
+- Englisch - `en`
 - Estonian – `et`  
 - Finnish – `fi`  
 - French – `fr`  
