Fix typo in language support documentation by correcting "Englisch" to "English".

--- a/knowledge-base/miscellaneous/language-support.mdx
+++ b/knowledge-base/miscellaneous/language-support.mdx
@@ -23,7 +23,7 @@ Below is the list of supported languages along with their corresponding [ISO 639
 - Czech – `cs`  
 - Danish – `da`  
 - Dutch – `nl`
-- Englisch - `en`
+- English - `en`
 - Estonian – `et`  
 - Finnish – `fi`  
 - French – `fr`  
