Update Keyingress integration video link to the latest version for improved user guidance.

--- a/integration-guides/keyingress.mdx
+++ b/integration-guides/keyingress.mdx
@@ -7,7 +7,7 @@ iconType: "regular"
 
 <iframe
   className="w-full aspect-video rounded-xl"
-  src="https://www.youtube.com/embed/w7vm2p6MpcQ?si=BVnk6J9SBE5m6aBL"
+  src="https://www.youtube.com/embed/t1FSL-XG10g?si=nrn6NaswWEL0Di5v"
   title="Keyingress Integration"
   frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
