--- a/changelogs/application-change-log.mdx
+++ b/changelogs/application-change-log.mdx
@@ -5,6 +5,28 @@ icon: "bullhorn"
 iconType: "regular"
 ---
 
+<Update label="2025-11-15" description="v1.3.0">
+  ## OES v3 Support: Enhanced Category Visualization and Effort Scale
+
+  ### 🔥 OES v3 Integration
+
+  The application now fully supports OES v3 with improved category detection and visualization capabilities.
+
+  ### 🚀 New Features
+
+  - **OES v3 Categories Visualization**: Support for visualizing the new OES v3 categories (AI_SUSPECT, OFF_TOPIC, NO_ANSWER, GIBBERISH) with clearer boundaries and improved accuracy.
+
+  - **Effort Scale Chart**: New chart visualizing the average effort (LOW, MEDIUM, HIGH) across a survey, providing insights into respondent engagement levels.
+
+  ### 📊 Enhanced Quality Metrics
+
+  - Improved category boundaries reduce false positives and false negatives
+  - Effort scale integration provides more nuanced quality assessments for VALID_ANSWER and NO_ANSWER categories
+  - Better scoring accuracy with OES v3 classification system
+
+  The application automatically detects surveys created with API v3 and displays the appropriate OES v3 categories and effort metrics.
+</Update>
+
 <Update label="2025-11-06" description="v1.2.5">
   ## File Import: Multi-Sheet Excel Support
 
