Revise open-ended response quality checks documentation to consolidate effort level definitions.
- Removed individual effort level examples from the Valid Answer category and integrated them into a new section for Effort Levels applicable to both Valid Answer and No Answer categories.
- Enhanced clarity by providing a unified explanation of effort levels, including definitions and examples for low, medium, and high effort responses.
- Streamlined the documentation to improve readability and understanding of scoring metrics.

--- a/knowledge-base/quality-checks/open-ended-score.mdx
+++ b/knowledge-base/quality-checks/open-ended-score.mdx
@@ -13,39 +13,11 @@ Open-ended quality checks evaluate free-text responses for relevance, informativ
 
 ReDem classifies each open-ended response into distinct quality categories, ensuring a clear and consistent assessment of respondent performance. These categories capture all essential dimensions of open-ended response quality, from high-effort, meaningful engagement to outright fraud.
 
-### 1. Valid Answer - Meaningful Answer with Varying Effort (Low / Medium / High)
+### 1. Valid Answer - Meaningful Answer with Varying Effort
 
 **Definition:**
 
 The question was read and answered meaningfully. The response is relevant to the question and demonstrates a varying degree of elaboration or cognitive effort.
-
-Effort is categorized into low, medium, or high, depending on the level of detail, specificity, and engagement shown in the response.
-
-**Effort Levels:**
-
-- **Low Effort**: Minimal response, short and factual, without elaboration.
-
-  **Example:**
-  
-  *Question: Please describe your ideal summer vacation:*
-  
-  *Answer: In Italy.*
-
-- **Medium Effort**: Some elaboration with relevant details; the response provides some context or specificity.
-
-  **Example:**
-  
-  *Question: Please describe your ideal summer vacation:*
-  
-  *Answer: At a vineyard in Tuscany.*
-
-- **High Effort**: Detailed and thoughtful response including context, reasoning, and multiple elements.
-
-  **Example:**
-  
-  *Question: Please describe your ideal summer vacation:*
-  
-  *Answer: Two weeks at a Tuscan vineyard near Siena with my best friends, good food, and a swimming pool.*
 
 ### 2. No Answer ("Refusal or Inability to Answer")
 
@@ -72,6 +44,35 @@ The question was read but not meaningfully answered. The respondent signals unwi
 - I hate vacations
 - ???????????
 - n/a
+
+## Effort Levels (Valid Answer & No Answer)
+
+Effort is categorized into low, medium, or high, depending on the level of detail, specificity, and engagement shown in the response.  
+This effort scale is applied to the **Valid Answer** and **No Answer** categories.
+
+- **Low Effort**: Minimal response, short and factual, without elaboration.
+
+  **Example (Valid Answer):**
+  
+  *Question: Please describe your ideal summer vacation:*
+  
+  *Answer: In Italy.*
+
+- **Medium Effort**: Some elaboration with relevant details; the response provides some context or specificity.
+
+  **Example (Valid Answer):**
+  
+  *Question: Please describe your ideal summer vacation:*
+  
+  *Answer: At a vineyard in Tuscany.*
+
+- **High Effort**: Detailed and thoughtful response including context, reasoning, and multiple elements.
+
+  **Example (Valid Answer):**
+  
+  *Question: Please describe your ideal summer vacation:*
+  
+  *Answer: Two weeks at a Tuscan vineyard near Siena with my best friends, good food, and a swimming pool.*
 
 ### 3. Off Topic ("Irrelevant" - Misunderstanding or Lack of Motivation)
 
