Update OpenAPI documentation and changelogs for API v3 release
- Modified the OpenAPI specification for the `/v3/stopSurvey` endpoint to improve clarity in the request structure.
- Updated the changelog dates for API v3 and v2.2.0 releases to reflect the latest versioning.
- Added details in the application changelog regarding the manual update of respondents' excluded status, including new features for toggling status and automatic reason updates.

--- a/changelogs/application-change-log.mdx
+++ b/changelogs/application-change-log.mdx
@@ -25,6 +25,12 @@ iconType: "regular"
   - Better scoring accuracy with OES v3 classification system
 
   The application automatically detects surveys created with API v3 and displays the appropriate OES v3 categories and effort metrics.
+
+  ### 🧹 Manually Update Respondents' Excluded Status
+
+  - **Toggle exclusion status**: Manually switch one or more respondents between included and excluded without re-running the full import or cleaning flow.
+  - **Automatic reason updates**: The `Reasons For Exclusion` field is automatically updated to "Manually Excluded" to reflect each respondent's new status, keeping your quality reporting consistent.
+  - **Clear auditability**: Changes to exclusion status are surfaced in the UI so teams can quickly review which respondents were updated and why.
 </Update>
 
 <Update label="2025-11-06" description="v1.2.5">
