Add retry respondents feature in API and application changelogs
- Introduced a new API endpoint `/v3/retryRespondents` for retrying specific quality checks on respondents.
- Updated application changelog to reflect enhancements in retry functionality, including cost efficiency and granular control over quality checks.
- Both changelogs now include detailed descriptions of the new features and their benefits.

--- a/changelogs/api-change-log.mdx
+++ b/changelogs/api-change-log.mdx
@@ -5,6 +5,14 @@ icon: "bullhorn"
 iconType: "regular"
 ---
 
+<Update label="2025-12-02" description="v3.1.0">
+  ## New Endpoint: Retry Respondents
+
+  - <code style={{ color: "green" }}> POST /v3/retryRespondents </code> - Retry specific quality checks for a list of respondents within a survey.
+
+  See the [endpoint docs](/api-reference/endpoints/v3/retryRespondents) for request/response details.
+</Update>
+
 <Update label="2025-11-17" description="v3">
   ## API v3 Released: OES v3 with Enhanced Category Detection and Effort Scale
 
