--- a/changelogs/application-change-log.mdx
+++ b/changelogs/application-change-log.mdx
@@ -5,6 +5,15 @@ icon: "bullhorn"
 iconType: "regular"
 ---
 
+<Update label="2025-12-02" description="v1.3.2">
+  ## Retry Respondents
+
+  - **Recalculate specific checks**: You can now retry specific respondents and select exactly which quality checks to recalculate (OES, GQS, TS, CHS, BAS).
+  - **Cost Efficiency**: Credits are only deducted for the specific checks you select.
+  - **Granular control**: Provides flexibility to fix data issues or apply new quality standards to a subset of respondents.
+  - **Updated configuration**: Retry operations can include options to update allowed languages for OES, activate duplicate detection, and enable pattern checks for GQS during recalculation.
+</Update>
+
 <Update label="2025-11-15" description="v1.3.0">
   ## OES v3 Support: Enhanced Category Visualization and Effort Scale
 
